--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/app.js"></script>
 </head>
-<body>
+<body class="signin">
     <header>
         <div class="container">
             <h1>Still Alive</h1>
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 col-md-offset-3 signin">
                 <main>
                     <div class="row">
                         <!-- maybe use nav tabs instead later.... -->
