not finished editing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="row row-border">
                         <!-- maybe use nav tabs instead later.... -->
                         <div class="col-xs-6">
-                            <a ui-sref="firstpage-signup">
+                            <a ui-sref="">
                                 <h3 id="signup-button" class="selected">Sign Up</h3>
                             </a>
                         </div>
