--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/app.js"></script>
 </head>
-<body class="signin">
+<body class="signin-body">
     <header>
         <div class="container">
             <h1>Still Alive</h1>
@@ -44,7 +44,7 @@
 
     <div class="container" id="login-box" ng-app="Main" ng-controller="FirstPageController">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 signin">
+            <div class="col-md-6 col-md-offset-3 signin-col">
                 <main>
                     <div class="row row-border">
                         <!-- maybe use nav tabs instead later.... -->
