not finished needs work

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     <div class="row row-border">
                         <!-- maybe use nav tabs instead later.... -->
                         <div class="col-xs-6">
-                            <a ui-sref="">
+                            <a ui-sref="signup">
                                 <h3 id="signup-button" class="selected">Sign Up</h3>
                             </a>
                         </div>
                         <div class="col-xs-6 what">
-                            <a ui-sref="firstpage-login" >
+                            <a ui-sref="login" >
                                 <h3 id="login-button">Log In</h3>
                             </a>
                         </div>
