--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
             <div class="col-md-6 col-md-offset-3 signin-col">
                 <main>
                     <div class="row row-border">
-                        <!-- maybe use nav tabs instead later.... -->
                         <div class="col-xs-6">
-                            <a ui-sref="firstpage-signup">
+                            <a ui-sref="signup">
                                 <h3 id="signup-button" class="selected">Sign Up</h3>
                             </a>
                         </div>
                         <div class="col-xs-6 what">
-                            <a ui-sref="firstpage-login" >
+                            <a ui-sref="login" >
                                 <h3 id="login-button">Log In</h3>
                             </a>
                         </div>
@@ -69,7 +68,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 id="next-button">Next</h3>
+                            <a href=""<h3 id="next-button">Next</h3>
                         </div>
                     </div>
                 </main>
