fixed a button that doesnt even matter

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <a href=""<h3 id="next-button">Next</h3>
+                            <a id="next-button" href=""><h3>Next</h3></a>
                         </div>
                     </div>
                 </main>
