working on third view

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <!-- Bootstrap Form Helpers -->
     <!--<link href="css/bootstrap-form-helpers.min.css" rel="stylesheet" media="screen">-->
 
-
     <!-- http://bootstrapformhelpers.com/phone/#jquery-plugins-->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
 
@@ -44,22 +43,8 @@
 
     <div class="container" id="login-box" ng-app="Main" ng-controller="FirstPageController">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 signin-col">
+            <div class="col-md-6 col-md-offset-3 main">
                 <main>
-                    <div class="row row-border">
-                        <div class="col-xs-6">
-                            <a ui-sref="signup">
-                                <h3 id="signup-button" class="selected">Sign Up</h3>
-                            </a>
-                        </div>
-                        <div class="col-xs-6 what">
-                            <a ui-sref="login" >
-                                <h3 id="login-button">Log In</h3>
-                            </a>
-                        </div>
-                    </div>
-
-
                     <div class="row">
                         <div ui-view class="col-md-12">
 
