--- a/location/map.html
+++ b/location/map.html
@@ -6,7 +6,7 @@
     <!-- jQuery cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <script src="location.js"></script>
+    <script src="notify.js"></script>
 
     <!-- google maps api -->
     <script async defer
