--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <!--angular local storage module (for local storage)-->
         <script src="lib/angular-local-storage.min.js"></script>
 
+        <!-- jQuery cdn -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+        <script src="js/location.js"></script>
+
+        <!-- google maps api -->
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPqc3B1TqCnIA0UXPG0jCU15GMJCAPswI&callback=initialize">
+        </script>
+
         <link rel="stylesheet" href="css/main.css">
         <script src="js/app.js"></script>
     </head>
