integrated map into the app

--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
         <!--angular local storage module (for local storage)-->
         <script src="lib/angular-local-storage.min.js"></script>
 
+        <!--angular google maps module -->
+        <script src='lib/angular-google-maps.min.js'></script>
+
         <!-- jQuery cdn -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-        <script src="js/notify.js"></script>
+        <!--<script src="js/notify.js"></script>-->
 
         <!-- google maps api -->
         <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPqc3B1TqCnIA0UXPG0jCU15GMJCAPswI&callback=initialize">
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPqc3B1TqCnIA0UXPG0jCU15GMJCAPswI">
         </script>
+
+        <!--<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>-->
 
 
         <link rel="stylesheet" href="css/main.css">
