--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- google maps api -->
         <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPqc3B1TqCnIA0UXPG0jCU15GMJCAPswI">
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPqc3B1TqCnIA0UXPG0jCU15GMJCAPswI&libraries=places">
         </script>
 
 
